--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -4,7 +4,7 @@
         <title>{% if page.title %}{{ page.title }} &ndash; {% endif %}Mr Su's Rules</title>
         <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-        <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}Tracy Su{% endif %}"/>
+        <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}Mr Su's Rules{% endif %}"/>
         <meta property="og:type" content="article"/>
         <meta property="og:url" content="http://tracysu.me{{ page.url }}"/>
         <meta property="og:site_name" content="Tracy Su"/>
@@ -37,7 +37,7 @@
                         <div class="row spacer"></div>
                         <div class="row">
                             <div class="span8">
-                                <p>I'm a final year student at the Uni of Liverpool, this is my blog</p>
+                                <p>I'm a final year student at the Uni of Liverpool, this is my blog！</p>
                             </div>
                         </div>
                     </div>
