--- a/_includes/post.html
+++ b/_includes/post.html
@@ -11,7 +11,7 @@
 <div class="row spacer"></div>
 <div class="row">
     <div class="span8">
-        <span id="copyright"><a href="https://github.com/dylanvee/dylanvee.github.com/blob/master/README.md">&copy; {{ site.time | date: "%Y" }} Dylan Vassallo</a></span>
+        <span id="copyright">&copy; {{ site.time | date: "%Y" }} Tracy Su</a></span>
         <span id="more-posts" class="pull-right"><a href="/posts">More posts &rarr;</a></span>
     </div>
 </div>
