--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -7,7 +7,7 @@
         <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}Mr Su's Rules{% endif %}"/>
         <meta property="og:type" content="article"/>
         <meta property="og:url" content="http://tracysu.me{{ page.url }}"/>
-        <meta property="og:site_name" content="Tracy Su"/>
+        <meta property="og:site_name" content="Mr Su's Rules"/>
         <meta property="fb:admins" content="1057560040"/>
         <link rel="stylesheet" href="/css/bootstrap.min.css"/>
         <link rel="stylesheet" href="/css/bootstrap-responsive.min.css"/>
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="/css/prettify.css"/>
         <link rel="stylesheet" href="/css/style.css"/>
         <link rel="shortcut icon" href="/favicon.ico"/>
-        <link rel="alternate" href="/atom.xml" type="application/atom+xml" title="Tracy Su"/>
+        <link rel="alternate" href="/atom.xml" type="application/atom+xml" title="Mr Su's Rules"/>
     </head>
     <body>
         <div class="container">
@@ -41,7 +41,7 @@
                             </div>
                         </div>
                     </div>
-                    <div id="elsewhere" class="dropdown">
+                    <div id="contact" class="dropdown">
                         <div class="row spacer"></div>
                         <div class="row">
                             <div class="span1"><a href="https://twitter.com/tracysu" target="_blank"><img src="/images/elsewhere/twitter.png"/></a></div>
