--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -29,7 +29,7 @@
                             <ul id="nav" class="inline pull-right">
                                 <li id="nav-about" class="dropdown" data-page="about"><a href="javascript:void(0)">About</a></li>
                                 <li id="nav-posts" data-page="posts"><a href="/posts">Posts</a></li>
-                                <li id="nav-elsewhere" class="dropdown" data-page="elsewhere"><a href="javascript:void(0)">Elsewhere</a></li>
+                                <li id="nav-elsewhere" class="dropdown" data-page="elsewhere"><a href="javascript:void(0)">contact</a></li>
                             </ul>
                         </div>
                     </div>
@@ -41,7 +41,7 @@
                             </div>
                         </div>
                     </div>
-                    <div id="contact" class="dropdown">
+                    <div id="elsewhere" class="dropdown">
                         <div class="row spacer"></div>
                         <div class="row">
                             <div class="span1"><a href="https://twitter.com/tracysu" target="_blank"><img src="/images/elsewhere/twitter.png"/></a></div>
