--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -23,13 +23,13 @@
                 <div class="span8 offset2">
                     <div class="row">
                         <div class="span4">
-                            <h1 id="heading"><a href="/">Tracy Su</a></h1>
+                            <h1 id="heading"><a href="/">Mr Su's Rules</a></h1>
                         </div>
                         <div class="span4">
                             <ul id="nav" class="inline pull-right">
                                 <li id="nav-about" class="dropdown" data-page="about"><a href="javascript:void(0)">About</a></li>
                                 <li id="nav-posts" data-page="posts"><a href="/posts">Posts</a></li>
-                                <li id="nav-elsewhere" class="dropdown" data-page="elsewhere"><a href="javascript:void(0)">contact</a></li>
+                                <li id="nav-elsewhere" class="dropdown" data-page="elsewhere"><a href="javascript:void(0)">Contact</a></li>
                             </ul>
                         </div>
                     </div>
