--- a/_includes/post.html
+++ b/_includes/post.html
@@ -2,12 +2,29 @@
 <ul class="inline post-info">
     <li class="post-date">{{ post.date | date: "%B %-d, %Y" }}</li>
     <div class="visible-phone"></br></div>
-    
+    <!--
     <li class="share-twitter"><a href="https://twitter.com/share" class="twitter-share-button" data-text="{{ post.title }}" data-url="http://dylanv.org{{ post.url }}" data-via="dylanvee" data-related="dylanvee">Share on Twitter</a></li>
-    <li class="share-hn"><a href="http://news.ycombinator.com/submit" class="hn-share-button" data-title="{{ post.title }}" data-url="http://dylanv.org{{ post.url }}">Vote on HN</a></li>
-    
+    -->
 </ul>
 <div class="content instapaper_body">{{ post.content | markdownify }}</div>
+
+<div id="disqus_thread"></div>
+<script type="text/javascript">
+    /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+    var disqus_shortname = 'mrsusrules'; // required: replace example with your forum shortname
+
+    /* * * DON'T EDIT BELOW THIS LINE * * */
+    (function() {
+        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+        dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+<a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+
+
+
 <div class="row spacer"></div>
 <div class="row">
     <div class="span8">
