--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -37,7 +37,7 @@
                         <div class="row spacer"></div>
                         <div class="row">
                             <div class="span8">
-                                <p>I'm a final year student at the Uni of Liverpool, this is my blog！</p>
+                                <p>I'm a final year student studying e-Finance at the Uni of Liverpool, welcome to my website！</p>
                             </div>
                         </div>
                     </div>
