--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -44,7 +44,7 @@
                     <div id="elsewhere" class="dropdown">
                         <div class="row spacer"></div>
                         <div class="row">
-                            <div class="span1"><a href="https://twitter.com/tracysu" target="_blank"><img src="/images/elsewhere/twitter.png"/></a></div>
+                            <div class="span1"><a href="https://twitter.com/TracySu_" target="_blank"><img src="/images/elsewhere/twitter.png"/></a></div>
                             <div class="span1"><a href="https://github.com/tracysu" target="_blank"><img src="/images/elsewhere/github.png"/></a></div>
                             <div class="span1"><a href="http://www.facebook.com/tracy.y.s.3" target="_blank"><img src="/images/elsewhere/facebook.png"/></a></div>
                             <div class="span1"><a href="mailto:tracysu1860@me.com" target="_blank"><img src="/images/elsewhere/email.png"/></a></div>
