--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -16,6 +16,9 @@
         <link rel="stylesheet" href="/css/style.css"/>
         <link rel="shortcut icon" href="/favicon.ico"/>
         <link rel="alternate" href="/atom.xml" type="application/atom+xml" title="Mr Su's Rules"/>
+    <link href="../css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css">
+    <link href="../css/style.css" rel="stylesheet" type="text/css">
+    <link href="../css/bootstrap.min.css" rel="stylesheet" type="text/css">
     </head>
     <body>
         <div class="container">
