--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>{% if page.title %}{{ page.title }} &ndash; {% endif %}Mr Su's Rules</title>
+        <title>{% if page.title %}{{ page.title }} &ndash; {% endif %}Mr Su's Rules | 自说自话</title>
         <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
         <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}Mr Su's Rules{% endif %}"/>
