--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@ body {
     margin-top: 40px;
     margin-bottom: 40px;
     font-family: "Vollkorn", serif;
+    background: url(/images/background.png) repeat left top;
+
 }
 
 #heading {
