--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -23,7 +23,7 @@
                 <div class="span8 offset2">
                     <div class="row">
                         <div class="span4">
-                            <h1 id="heading"><a href="/">Mr Su's Rules |自说自话</a></h1>
+                            <h1 id="heading"><a href="/">Mr Su's Rules</a></h1>
                         </div>
                         <div class="span4">
                             <ul id="nav" class="inline pull-right">
