--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 body {
     margin-top: 40px;
     margin-bottom: 40px;
-    font-family: "Vollkorn", serif;
+    font-family: "Vollkorn", serif; 
+    background-color: gray;
 }
 
 #heading {
