--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,8 @@ body {
     margin-top: 40px;
     margin-bottom: 40px;
     font-family: "Vollkorn", serif; 
-    background-color: gray;
+    background-color: #ffffff;
+    background: url(/images/background.png);
 }
 
 #heading {
