--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body {
     margin-bottom: 40px;
     font-family: "Vollkorn", serif; 
     background-color: #ffffff;
-    background: url(/images/background.png);
+    background: url(tracysu.github.com/images/background.png);
 }
 
 #heading {
