--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
     margin-top: 40px;
     margin-bottom: 40px;
     font-family: "Vollkorn", serif; 
-    background-color: #ffffff;
+    background-color: #d3d3d3;
     background: url(tracysu.github.com/images/background.png);
 }
 
