--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -29,7 +29,8 @@
                             <ul id="nav" class="inline pull-right">
                                 <li id="nav-about" class="dropdown" data-page="about"><a href="javascript:void(0)">About</a></li>
                                 <li id="nav-posts" data-page="posts"><a href="/posts">Posts</a></li>
-                                <li id="nav-elsewhere" class="dropdown" data-page="elsewhere"><a href="javascript:void(0)">Contact</a></li>
+                                <li id="nav-elsewhere" class="dropdown" data-page="elsewhere"><a href="javascript:void(0)">Contact</a>
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -44,10 +45,10 @@
                     <div id="elsewhere" class="dropdown">
                         <div class="row spacer"></div>
                         <div class="row">
-                            <div class="span1"><a href="https://twitter.com/TracySu_" target="_blank"><img src="/images/elsewhere/twitter.png"/></a></div>
-                            <div class="span1"><a href="https://github.com/tracysu" target="_blank"><img src="/images/elsewhere/github.png"/></a></div>
-                            <div class="span1"><a href="http://www.facebook.com/tracy.y.s.3" target="_blank"><img src="/images/elsewhere/facebook.png"/></a></div>
-                            <div class="span1"><a href="mailto:tracysu1860@me.com" target="_blank"><img src="/images/elsewhere/email.png"/></a></div>
+                            <div class="span1"><a href="http://weibo.com/1801491860/profile?topnav=1&wvr=5" target="_blank"><img src="/images/elsewhere/weibo.jpeg"/></a></div>
+                            <div class="span1"><a href="https://github.com/tracysu" target="_blank"><img src="/images/elsewhere/github.jpeg"/></a></div>
+                            <div class="span1"><a href="http://www.facebook.com/tracy.y.s.3" target="_blank"><img src="/images/elsewhere/facebook.jpeg"/></a></div>
+                            <div class="span1"><a href="mailto:tracysu1860@me.com" target="_blank"><img src="/images/elsewhere/mail.jpeg"/></a></div>
                         </div>
                     </div>
                     <div class="row spacer"></div>
