--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -38,7 +38,7 @@
                         <div class="row spacer"></div>
                         <div class="row">
                             <div class="span8">
-                                <p>I'm a final year student studying e-Finance at the <a href="csc.liv.ac.uk" target="_blank">Uni. of Liverpool.<a></p>
+                                <p>I'm a final year student studying e-Finance at the <a href="csc.liv.ac.uk" target="_blank">Uni. of Liverpool.</a></p>
                                 <p>My philosophy is <i>Know something about everything, and everthing about something.</i> I'm glad this programme has always spotted new ideas.</p>
                                 <p>My intersts are<a href="http://www.csc.liv.ac.uk/teaching/modules/year3s2/comp396.html" target="_blank"> Automated Trading</a> and web technology.</p>
 
