--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -41,8 +41,7 @@
                                 <p>I'm a final year student studying e-Finance at the <a href="csc.liv.ac.uk" target="_blank">Uni. of Liverpool.</a></p>
                                 <p>My philosophy is <i>Know something about everything, and everthing about something.</i> I'm glad this programme has always spotted new ideas.</p>
                                 <p>My intersts are<a href="http://www.csc.liv.ac.uk/teaching/modules/year3s2/comp396.html" target="_blank"> automated trading</a> and web technology.</p>
-                                <hr width=80% size=1 color=#00ffff style="border:1 dashed #00ffff">
-
+                                <hr width=80% size=3 color=#00ffff style="FILTER: alpha(opacity=100,finishopacity=0,style=3)">
 
                             </div>
                         </div>
