--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -34,7 +34,7 @@
                             </ul>
                         </div>
                     </div>
-                    <img src="/images/content.jpg">
+                    <hr width=80% size=1 color=#00ffff style="border:1 dashed #00ffff">
 
                     <div id="about" class="dropdown">
                         <div class="row spacer"></div>
