--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -39,7 +39,7 @@
                         <div class="row spacer"></div>
                         <div class="row">
                             <div class="span8">
-                                <p>I'm a final year student studying e-Finance at the <a href="http://www.csc.liv.ac.uk/" target="_blank">Uni. of Liverpool.</a></p>
+                                <p>I'm a final year student studying e-Finance at the<a href="http://www.csc.liv.ac.uk/" target="_blank"> Uni. of Liverpool</a>.</p>
                                 <p>My philosophy is <i>Know something about everything, and everthing about something. </i> I'm glad this programme has been always spotting new ideas.</p>
                                 <p>My intersts are<a href="http://www.csc.liv.ac.uk/teaching/modules/year3s2/full-comp396.html" target="_blank"> automated trading</a> , web technology and potentially big data.</p>
                                 <hr width=80% size=1 color=#00ffff style="border:1 dashed #00ffff">
