--- a/_includes/post.html
+++ b/_includes/post.html
@@ -8,8 +8,10 @@
 </ul>
 <div class="content instapaper_body">{{ post.content | markdownify }}</div>
 
-<div id="disqus_thread"></div>
+ <hr width=80% size=1 color=#C82829 style="border:1 dashed #00ffff">
 
+<!-- disqus -->
+<div id="disqus_thread"></div>
 <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
     var disqus_shortname = 'mrsusrules'; // required: replace example with your forum shortname
