--- a/_includes/post.html
+++ b/_includes/post.html
@@ -8,7 +8,7 @@
 </ul>
 <div class="content instapaper_body">{{ post.content | markdownify }}</div>
 
- <hr width=80% size=1 color=#C82829 style="border:1 dashed #00ffff">
+ <hr width=100% size=1 color=#C82829 style="border:1 dashed #C82829">
 
 <!-- disqus -->
 <div id="disqus_thread"></div>
