--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -43,7 +43,7 @@
                                 <p>My philosophy is <i>Know something about everything, and everthing about something. </i> I'm glad this programme has been always spotting new ideas.</p>
                                 <p>My intersts are<a href="http://www.csc.liv.ac.uk/teaching/modules/year3s2/full-comp396.html" target="_blank"> automated trading</a> , web technology and potentially big data.</p>
                                 <hr width=80% size=1 color=#00ffff style="border:1 dashed #00ffff">
-                                <p>除此以外，我还<b><font color="#c82829">喜欢</font></b>：所有运动，优美的设计，牛逼的灵魂，简洁，高科技，无纸化学习，给别人起外号，炸酱面，虾，diet coke, 一个人泡图书馆和去gym的女孩儿，搭车，一个人旅行，开玩笑，喝大酒，kindle，纸书，terminal，douban，衬衣，冷笑话，UI，想事儿，Mac OS，ubuntu，毛笔字，瘦金体，打扫房子，R语言，节食主义，黑人文化，宗教，科学，有常识的人，精确复杂的东西。</p>
+                                <p>除此以外，我还<b><font color="#c82829">喜欢</font></b>：所有运动，优美的设计，牛逼的灵魂，简洁，高科技，无纸化学习，给别人起外号，炸酱面，Moleskine，一个人泡图书馆和去gym的女孩儿，搭车，一个人旅行，开玩笑，喝大酒，kindle，纸书，terminal，douban，衬衣，冷笑话，UI，想事儿，Mac OS，ubuntu，毛笔字，瘦金体，打扫房子，R语言，络腮胡，节食主义，黑人文化，宗教，科学，常识，精确复杂的东西。</p>
                             </div>
                         </div>
                     </div>
