--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -40,7 +40,7 @@
                         <div class="row">
                             <div class="span8">
                                 <p>I'm a final year student studying e-Finance at the<a href="http://www.csc.liv.ac.uk/" target="_blank"> Uni. of Liverpool</a>.</p>
-                                <p>Yet, I'm not very much fancy about 'Finance', but 'e'. I'm glad this programme has been always spotting new ideas. My philosophy is <i>Know something about everything, and everthing about something. </i> I would like to talk to you if you are also interested in things like<a href="http://www.csc.liv.ac.uk/teaching/modules/year3s2/full-comp396.html" target="_blank"> automated trading</a> , web technology, potentially big data or anything interesting.</p>
+                                <p>Yet, I'm not very much fancy about 'Finance', but 'e'. Even though, I'm glad this programme has been always spotting new ideas. My philosophy is <i>Know something about everything, and everthing about something. </i> I would like to talk to you if you are also interested in things like<a href="http://www.csc.liv.ac.uk/teaching/modules/year3s2/full-comp396.html" target="_blank"> automated trading</a> , web technology, potentially big data or anything interesting.</p>
                                 <hr width=80% size=1 color=#00ffff style="border:1 dashed #00ffff">
                                 <p>除此以外，我还<b><font color="#c82829">喜欢</font></b>：大部分运动，优美的设计，牛逼的灵魂，简洁，高科技，无纸化学习，给别人起外号，炸酱面，Moleskine，一个人泡图书馆和去gym的女孩儿，搭车，一个人旅行，开玩笑，喝大酒，kindle，纸书，terminal，douban，衬衣，冷笑话，UI，想事儿，Mac OS，ubuntu，毛笔字，瘦金体，打扫房子，R语言，络腮胡，节食主义，黑人文化，宗教，科学，常识，精确复杂的东西。</p>
                             </div>
