--- a/_includes/post.html
+++ b/_includes/post.html
@@ -9,8 +9,7 @@
 <div class="content instapaper_body">{{ post.content | markdownify }}</div>
 
 <br>
-<hr style="border: 1px dotted #C82829;">
-
+<img src="/images/footer.gif">
 
 <!-- disqus -->
 <div id="disqus_thread"></div>
