--- a/_includes/post.html
+++ b/_includes/post.html
@@ -9,7 +9,7 @@
 <div class="content instapaper_body">{{ post.content | markdownify }}</div>
 
 <br>
-<img src="/images/footer.gif">
+<img  align="center" src="/images/footer.gif">
 
 <!-- disqus -->
 <div id="disqus_thread"></div>
