--- a/_includes/post.html
+++ b/_includes/post.html
@@ -9,7 +9,7 @@
 <div class="content instapaper_body">{{ post.content | markdownify }}</div>
 
 <br>
-<img  align="center" src="/images/footer.gif">
+<hr style="border: 1px dotted #C82829;">
 
 <!-- disqus -->
 <div id="disqus_thread"></div>
