--- a/css/style.css
+++ b/css/style.css
@@ -109,14 +109,14 @@ a.posts-title:visited {
 }
 
 code, pre {
-    font-family: "Menlo", "Consolas", monospace;
-    border: none;
-    color: #FFF;
+    font-family: "Courier New", "Terminal", monospace;
+    border: 1px solid silver;
+    color: #000;
     -webkit-font-smoothing: antialiased;
 }
 
 code {
-    background-color: #333;
+    background-color: #f8f8f8;
 }
 
 pre {
