--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,7 @@ a.posts-title:visited {
 */
 
 .CodeRay {
-  background-color: #f8f8f8;
+  background-color: #1d1f21;
   border: 1px solid silver;
   font-family: 'Courier New', 'Terminal', monospace;
   color: #000;
