--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,7 @@ a.posts-title:visited {
   background-color: #1d1f21;
   border: 1px solid silver;
   font-family: 'Courier New', 'Terminal', monospace;
-  color: #000;
+  color: #1d1f21;
 }
 .CodeRay pre { margin: 0px }
 
