--- a/css/style.css
+++ b/css/style.css
@@ -122,11 +122,11 @@ code, pre {
 }
 
 code {
-    background-color: #999999;
+    background-color: #333;
 }
 
 pre {
-    background-color: #a4a5a6;
+    background-color: #1D1F21;
 }
 
 pre.prettyprint {
