--- a/css/style.css
+++ b/css/style.css
@@ -113,8 +113,21 @@ a.posts-title:visited {
 /*
   CSS extraction & comments via http://thoughtsincomputation.com/posts/coderay-stylesheet-classes
 */
-pre,code{font-family:Menlo,"Andale Mono",Consolas,"Courier New",Monaco,monospace;font-size:13px;}
-code{background-color:#F7F7F7;}
+
+code, pre {
+    font-family: "Menlo", "Consolas", monospace;
+    border: none;
+    color: #FFF;
+    -webkit-font-smoothing: antialiased;
+}
+
+code {
+    background-color: #474747;
+}
+
+pre {
+    background-color: #474747;
+}
 
 pre.prettyprint {
     margin-bottom: inherit;
