--- a/css/style.css
+++ b/css/style.css
@@ -117,11 +117,11 @@ code, pre {
 }
 
 code {
-    background-color: #5b5b5b;
+    background-color: #333;
 }
 
 pre {
-    background-color: #5b5b5b;
+    background-color: #1D1F21;
 }
 
 pre.prettyprint {
