--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -29,7 +29,8 @@
                             <ul id="nav" class="inline pull-right">
                                 <li id="nav-about" class="dropdown" data-page="about"><a href="javascript:void(0)">About</a></li>
                                 <li id="nav-posts" data-page="posts"><a href="/posts">Posts</a></li>
-                                <li id="nav-elsewhere" class="dropdown" data-page="elsewhere"><a href="javascript:void(0)">Contact</a>
+                                <li id="nav-elsewhere" class="dropdown" data-page="elsewhere"><a href="javascript:void(0)">Contact</
+                                    >
                                 </li>
                             </ul>
                         </div>
@@ -69,6 +70,8 @@
         <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
         -->
         <script src="/js/prettify.js"></script>
+        
+
         <script>
             // Hacker News button
             // (function(d, t) {
@@ -81,12 +84,13 @@
 
             // Google Analytics
             var _gaq = _gaq || [];
-            _gaq.push(['_setAccount', 'UA-10535194-5']);
+            _gaq.push(['_setAccount', 'UA-38642308-1']);
             _gaq.push(['_trackPageview']);
+
             (function() {
-                var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-                ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-                var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
             })();
 
 
