--- a/_includes/post.html
+++ b/_includes/post.html
@@ -11,6 +11,23 @@
 <br>
 <hr style="border: 1px dotted #C82829;">
 
+
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-38642308-1']);
+  _gaq.push(['_setDomainName', 'tracysu.me']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
+
+
 <!-- disqus -->
 <div id="disqus_thread"></div>
 <script type="text/javascript">
