--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -71,6 +71,20 @@
         -->
         <script src="/js/prettify.js"></script>
         
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-38642308-1']);
+  _gaq.push(['_setDomainName', 'tracysu.me']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
 
         <script>
             // Hacker News button
@@ -80,18 +94,6 @@
             //     g.src = '//hnbutton.appspot.com/static/hn.min.js';
             //     s.parentNode.insertBefore(g, s);
             // }(document, 'script'));
-
-
-            // Google Analytics
-            var _gaq = _gaq || [];
-            _gaq.push(['_setAccount', 'UA-38642308-1']);
-            _gaq.push(['_trackPageview']);
-
-            (function() {
-            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-            })();
 
 
             $(function () {
