--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,9 @@ body {
     margin-top: 40px;
     margin-bottom: 40px;
     font-family: "Vollkorn", serif; 
+
     background-image: url(/images/backgroud.png);
+    background-color: "#E0E0E0";
 }
 
 #heading {
