--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body {
     margin-bottom: 40px;
     font-family: "Vollkorn", serif; 
 
-    background-image: url(/images/backgroud.png);
+    /*background-image: url(/images/backgroud.png);*/
     background-color: "#E0E0E0";
 }
 
