--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body {
     font-family: "Vollkorn", serif; 
 
     /*background-image: url(/images/backgroud.png);*/
-    background-color: "#E0E0E0";
+    background-color: "#B8B8B8";
 }
 
 #heading {
