--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body {
     font-family: "Vollkorn", serif; 
 
     /*background-image: url(/images/backgroud.png);*/
-    background-color: #C0C0C0;
+    background-color: #E8E8E8;
 }
 
 #heading {
