--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -50,10 +50,10 @@
                     <div id="elsewhere" class="dropdown">
                         <div class="row spacer"></div>
                         <div class="row">
-                            <div class="span1"><a href="http://weibo.com/1801491860/profile?topnav=1&wvr=5" target="_blank"><img src="/images/elsewhere/weibo.jpg"/></a></div>
-                            <div class="span1"><a href="https://github.com/tracysu" target="_blank"><img src="/images/elsewhere/github.jpg"/></a></div>
-                            <div class="span1"><a href="http://www.facebook.com/tracy.y.s.3" target="_blank"><img src="/images/elsewhere/facebook.jpg"/></a></div>
-                            <div class="span1"><a href="mailto:tracysu1860@me.com" target="_blank"><img src="/images/elsewhere/email.jpg"/></a></div>
+                            <div class="span1"><a href="http://weibo.com/1801491860/profile?topnav=1&wvr=5" target="_blank"><img src="/images/elsewhere/weibo.png"/></a></div>
+                            <div class="span1"><a href="https://github.com/tracysu" target="_blank"><img src="/images/elsewhere/github.png"/></a></div>
+                            <div class="span1"><a href="http://www.facebook.com/tracy.y.s.3" target="_blank"><img src="/images/elsewhere/facebook.png"/></a></div>
+                            <div class="span1"><a href="mailto:tracysu1860@me.com" target="_blank"><img src="/images/elsewhere/email.png"/></a></div>
                         </div>
                     </div>
                     <div class="row spacer"></div>
