--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -29,8 +29,7 @@
                             <ul id="nav" class="inline pull-right">
                                 <li id="nav-about" class="dropdown" data-page="about"><a href="javascript:void(0)">About</a></li>
                                 <li id="nav-posts" data-page="posts"><a href="/posts">Posts</a></li>
-                                <li id="nav-elsewhere" class="dropdown" data-page="elsewhere"><a href="javascript:void(0)">Contact</
-                                    >
+                                <li id="nav-elsewhere" class="dropdown" data-page="elsewhere"><a href="javascript:void(0)">Contact</>
                                 </li>
                             </ul>
                         </div>
