--- a/css/style.css
+++ b/css/style.css
@@ -119,11 +119,11 @@ code, pre {
 }
 
 code {
-    background-color: #E6E6E6;
+    background-color: #f5f5f5;
 }
 
 pre {
-    background-color: #e6e6e6;
+    background-color: #f5f5f5;
 }
 
 pre.prettyprint {
