--- a/css/prettify.css
+++ b/css/prettify.css
@@ -3,14 +3,14 @@
 
 /* SPAN elements with the classes below are added by prettyprint. */
 
-.pln { color: #FFFFFF }  /* plain text */
-.str { color: #a71b1d}  /* string content */
-.kwd { color: #217600}  /* a keyword */
-.com { color: #547672}  /* a comment */
+.pln { color: #660908}  /* plain text */
+.str { color: #262426}  /* string content */
+.kwd { color: #992319}  /* a keyword */
+.com { color: #3e7272}  /* a comment */
 .typ { color: #F0C674 }  /* a type name */
 .lit { color: #B5BD68 }  /* a literal value */
 /* punctuation, lisp open bracket, lisp close bracket */
-.pun, .opn, .clo { color: #FFFFFF }
+.pun, .opn, .clo { color: #81b4a8}
 .tag { color: #CC6666 }  /* a markup tag name */
 .atn { color: #CC6666 }  /* a markup attribute name */
 .atv { color: #B5BD68 }  /* a markup attribute value */
