--- a/css/style.css
+++ b/css/style.css
@@ -114,12 +114,12 @@ a.posts-title:visited {
 code, pre {
     font-family: "Menlo", "Consolas", monospace;
     border: none;
-    color: #FFF;
+    color: #2a272a;
     -webkit-font-smoothing: antialiased;
 }
 
 code {
-    background-color: #f5f5f5;
+    background-color: #2a272a;
 }
 
 pre {
