--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,7 @@ a.posts-title:visited {
 code, pre {
     font-family: "Menlo", "Consolas", monospace;
     border: none;
-    color: #2a272a;
+    color: #1f1f1f;
     -webkit-font-smoothing: antialiased;
 }
 
