--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -39,7 +39,7 @@
                         <div class="row spacer"></div>
                         <div class="row">
                             <div class="span8">
-                                <p>I'm a final year student studying e-Finance at the <a href="http://www.csc.liv.ac.uk" target="_blank"> Uni. of Liverpool.</a>
+                                <p>I'm a final year student studying e-Finance at the<a href="http://www.csc.liv.ac.uk/" target="_blank"> Uni. of Liverpool.</a>
                                 I'm not very much fancy about 'Finance', but rather 'e'. Even though, I'm glad this programme has been always spotting new ideas. My philosophy is <i>Know something of everything, and everthing of something. </i> Give me a shout if you are also interested in things like<a href="http://www.csc.liv.ac.uk/teaching/modules/year3s2/full-comp396.html" target="_blank"> automated trading,</a> web technology, potentially big data or anything interesting.</p>
 
                                 <hr width=80% size=1 color=#00ffff style="border:1 dashed #00ffff">
